fix(slides): fixes vertical align not working because of missing height

--- a/src/slides/_screen.scss
+++ b/src/slides/_screen.scss
@@ -1,5 +1,7 @@
 @media screen {
   .screen {
+    height: 100%;
+
     .slides {
       height: 100%;
       // avoid horizontal scroll bar
